tests/sumo/errors/person/personTrip_without_person/errors.sumo
Error: Cannot define person stage without person.
Quitting (on error).
